# synapse

./: .gitignore  README.md  config.ini  golive.py  gosynapse.py  gosynapse_old.py  gosynapse_v2.py  gosynapse_v3.py  install.sh  nginx.conf  pyproject.toml  repopack-output.txt  requirements.txt  setup.py  stream_forwarder.sh  synapse-livestream.service
ble-env/: pyvenv.cfg
gosynapse/core/: livestream.py
gosynapse/scripts/: gosynapse_cli.py
src/: gosynapse.py  gosynapse_v3.py
